added default styles for textarea

--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,16 @@ input {
   padding: 0;
 }
 
+textarea {
+  background: none;
+  border: 0;
+  cursor: pointer;
+  font: inherit;
+  outline: 0;
+  padding: 0;
+  resize: none;
+}
+
 #root {
   height: 100%;
 }
